Code fixes suggestions